--- a/labtasks/ActivityLifecycleMonitor/app/src/main/res/layout/activity_lifecycle_monitor.xml
+++ b/labtasks/ActivityLifecycleMonitor/app/src/main/res/layout/activity_lifecycle_monitor.xml
@@ -8,6 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:saveEnabled="false"
     tools:context="ro.pub.systems.eim.lab02.activitylifecyclemonitor.graphicuserinterface.LifecycleMonitorActivity">
 
     <ImageView
@@ -16,6 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:contentDescription="@string/icon_image_view_content_description"
+        android:saveEnabled="false"
         android:src="@drawable/ic_launcher"/>
 
     <EditText
@@ -25,6 +27,7 @@
         android:layout_gravity="center"
         android:ems="10"
         android:inputType="text"
+        android:saveEnabled="false"
         android:hint="@string/username">
         <requestFocus/>
     </EditText>
@@ -36,18 +39,21 @@
         android:layout_gravity="center"
         android:ems="10"
         android:inputType="textPassword"
+        android:saveEnabled="false"
         android:hint="@string/password"/>
 
     <CheckBox
         android:id="@+id/remember_me_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:saveEnabled="false"
         android:text="@string/remember_me_checkbox"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:saveEnabled="false"
         android:orientation="horizontal">
 
         <Button
@@ -55,11 +61,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:saveEnabled="false"
             android:text="@string/ok_button_content"/>
 
         <Space
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:saveEnabled="false"
             android:layout_weight="1"/>
 
         <Button
@@ -67,6 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:saveEnabled="false"
             android:text="@string/cancel_button_content"/>
 
     </LinearLayout>
